--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,17 +1,20 @@
 node {
    stage('Fetch') {
        git 'https://github.com/niamhcoleman/JenkinsPipeline.git'
+       echo "1"
     }
 
    stage('Build') {
         bat '''
         javac -cp "C:\Users\kevin\.p2\pool\plugins\org.junit_4.12.0.v201504281640";. "Student.java" "StudentTest.java"
         '''
+        echo "2"
    }
 
    stage('Test') {
         bat '''
         java -cp "C:\Users\kevin\.p2\pool\plugins\org.junit_4.12.0.v201504281640";. org.junit.runner.JUnitCore "StudentTest"
         '''
+        echo "3"
    }
 }
