Updated jenkins file

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,20 +1,25 @@
-node {
-   stage('Fetch') {
-       git 'https://github.com/niamhcoleman/JenkinsPipeline.git'
-       echo "1"
+pipeline {
+    agent any
+
+    stages {
+        stage('Get') {
+            steps {
+                git 'https://github.com/kquinn1998/JenkinsProject.git'
+            }
+        }
+        stage('Compile') {
+            steps {
+               bat '''
+               javac -cp "C:\\Users\\kevin\\.m2\\repository\\junit\\junit\\4.12\\junit-4.12.jar";"C:\\Users\\kevin\\.m2\\repository\\org\\hamcrest\\hamcrest-core\\1.3\\hamcrest-core-1.3.jar";. "Student.java" "studentTest.java"
+               '''
+            }
+        }
+        stage('Test') {
+            steps {
+               bat '''
+               java -cp "C:\\Users\\kevin\\.m2\\repository\\junit\\junit\\4.12\\junit-4.12.jar";"C:\\Users\\kevin\\.m2\\repository\\org\\hamcrest\\hamcrest-core\\1.3\\hamcrest-core-1.3.jar";. org.junit.runner.JUnitCore "studentTest"
+               '''
+            }
+        }
     }
-
-   stage('Build') {
-        bat '''
-        javac -cp "C:\Users\kevin\.p2\pool\plugins\org.junit_4.12.0.v201504281640";. "Student.java" "StudentTest.java"
-        '''
-        echo "2"
-   }
-
-   stage('Test') {
-        bat '''
-        java -cp "C:\Users\kevin\.p2\pool\plugins\org.junit_4.12.0.v201504281640";. org.junit.runner.JUnitCore "StudentTest"
-        '''
-        echo "3"
-   }
 }
